# YCPlayer

./: CMakeLists.txt
YCAV/: CMakeLists.txt  YCAV.h  YCAVClassPrivate.h  YCAVGlobalFnc.cpp  YCAVPacket.cpp  YCAVReader.cpp  YCCommonDef.h
YCPlayer/: CMakeLists.txt  YCPlayer.cpp  YCPlayer.h
YCThread/: CMakeLists.txt  YCThread.cpp  YCThread.h
dependents/spdlog/lib/Release/: spdlog.lib
